instance1/temp-retrieve/objects/Inventory__c/fields/Auotject_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Auotject_Quantity__c</fullName>
    <label>Auotject Quantity</label>
    <summarizedField>Add_Deduct_Inventory_Product__c.Product_Quantity__c</summarizedField>
    <summaryForeignKey>Add_Deduct_Inventory_Product__c.Inventory_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>