instance1/temp-retrieve/objects/Inventory__c/fields/Auotject_Quantity_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Auotject_Quantity_Asset_Amount__c</fullName>
    <formula>Auotject_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auotject Quantity Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>