instance1/temp-retrieve/objects/Inventory__c/fields/Corecyte_1ml_PBIO_CC100_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Corecyte_1ml_PBIO_CC100_Asset_Amount__c</fullName>
    <formula>Corecyte_1ml_PBIO_CC100_Quantity__c * 850</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corecyte 1ml PBIO-CC100 Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>