instance1/temp-retrieve/objects/Inventory__c/fields/Corecyte_1ml_PBIO_CC100_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Corecyte_1ml_PBIO_CC100_Quantity__c</fullName>
    <label>Corecyte 1ml PBIO-CC100 Quantity</label>
    <summarizedField>Add_Deduct_Inventory_Product__c.Product_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Add_Deduct_Inventory_Product__c.Product_Name__c</field>
        <operation>equals</operation>
        <value>Corecyte 1ml PBIO-CC100</value>
    </summaryFilterItems>
    <summaryForeignKey>Add_Deduct_Inventory_Product__c.Inventory_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>