instance1/temp-retrieve/objects/Inventory__c/fields/Corecyte_2ml_PBIO_CC200_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Corecyte_2ml_PBIO_CC200_Asset_Amount__c</fullName>
    <formula>Corecyte_2ml_PBIO_CC200_Quantity__c * 1400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corecyte 2ml PBIO-CC200 Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>