instance1/temp-retrieve/objects/Inventory__c/fields/Juvederm_Ultra_3_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Juvederm_Ultra_3_Asset_Amount__c</fullName>
    <formula>Juvederm_Ultra_3_Quantity__c * 159.50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Juvederm Ultra 3 Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>