instance1/temp-retrieve/objects/Inventory__c/fields/KY_Jelly_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>KY_Jelly_Asset_Amount__c</fullName>
    <formula>KY_Jelly_Quantity__c * 3.69</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KY Jelly Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>