instance1/temp-retrieve/objects/Inventory__c/fields/Nutrafol_Men_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Nutrafol_Men_Asset_Amount__c</fullName>
    <formula>Nutrafol_Men_Quantity__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nutrafol Men Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>