instance1/temp-retrieve/objects/Inventory__c/fields/PRP_Kit_30_Eclipse_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>PRP_Kit_30_Eclipse_Asset_Amount__c</fullName>
    <formula>PRP_Kit_30_Eclipse_Quantity__c * 159</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRP Kit-30-Eclipse Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>