instance1/temp-retrieve/objects/Inventory__c/fields/PRP_Kit_60_Harvest_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>PRP_Kit_60_Harvest_Asset_Amount__c</fullName>
    <formula>PRP_Kit_60_Harvest_Quantity__c * 220.48</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRP Kit-60-Harvest Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>