instance1/temp-retrieve/objects/Inventory__c/fields/Total_Amount_Of_Produtcs__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Of_Produtcs__c</fullName>
    <label>Total Amount Of Produtcs</label>
    <summarizedField>Add_Deduct_Inventory_Product__c.Product_Quantity__c</summarizedField>
    <summaryForeignKey>Add_Deduct_Inventory_Product__c.Inventory_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>