instance1/temp-retrieve/objects/Inventory__c/fields/UBER_Lube_Quantity__c.field-meta.xml
<CustomField>
    <fullName>UBER_Lube_Quantity__c</fullName>
    <label>UBER Lube Quantity</label>
    <summarizedField>Add_Deduct_Inventory_Product__c.Product_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Add_Deduct_Inventory_Product__c.Product_Name__c</field>
        <operation>equals</operation>
        <value>UBER Lube</value>
    </summaryFilterItems>
    <summaryForeignKey>Add_Deduct_Inventory_Product__c.Inventory_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>