instance1/temp-retrieve/objects/Inventory__c/fields/Verapamil_5MG_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Verapamil_5MG_Asset_Amount__c</fullName>
    <formula>Verapamil_5MG_Quantity__c * 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verapamil 5MG Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>